--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
+    "msgpack": "^1.0.3",
     "net": "^1.0.2",
     "node-fetch": "^3.3.2",
     "os": "^0.1.2"
