* 将 msgpack 更换为无需编译的 @msgpack/msgpack，避免部分情况下可能的编译问题。 * 调整配置载入逻辑，避免多次载入的性能问题。 * 使用引用解决后续可能的跨子插件配置同步问题。

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yunzai-fish-speech-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "yunzai-fish-speech-plugin",
   "type": "module",
   "module": "index.js",
@@ -15,10 +15,10 @@
   "author": "fishaudio, oldcitynight",
   "license": "CC-BY-NC-SA-4.0",
   "dependencies": {
+    "@msgpack/msgpack": "3.0.0-beta2",
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0",
-    "msgpack": "^1.0.3",
     "net": "^1.0.2",
     "node-fetch": "^3.3.2",
     "os": "^0.1.2"
