修正错误，添加新功能，再氵一个版本号

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Ignore all files in the config folder except those with .default suffix
-/config/*
-!/config/*.default
+# Ignore custom config.
+.yaml
 
 # Ignore Fish-Speech Folder
 /fish-speech
